--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,10 @@
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   list-style: none;
+}
+
 .page1 {
    height: 100vh;
 }
@@ -9,12 +16,13 @@ height: 10%;
 .nav-wrapper {
    display: flex;
    justify-content: space-evenly;
+   align-items: center;
+   padding-top: 20px;
 }
 
 .nav-list {
-   list-style: none;
    display: flex;
-   margin-left: -80px;
+   margin-left: -45px;
    font-family: 'Roboto', sans-serif;
    font-weight: 700;
    font-size: 16px;
@@ -27,7 +35,7 @@ height: 10%;
 
 .logo {
    align-self: center;
-   padding-right: 230px;
+   margin-right: 230px;
    cursor: pointer;
 }
 
@@ -37,7 +45,7 @@ height: 10%;
 }
 
 .links img {
-   padding-right: 18px;
+   margin-right: 18px;
 }
 
 
@@ -47,8 +55,9 @@ height: 10%;
    height: 90%;
    display: flex;
    justify-content: space-evenly;
+   align-items: center;
    background-color: #F0EFEB;
-   ;
+   
 }
 
 .text {
@@ -62,11 +71,13 @@ height: 10%;
    font-size: 60px;
    font-style: normal;
    font-weight: 700;
+   margin-bottom: 42px;
 }
 .information {
    font-family: 'Roboto', sans-serif;
    font-size: 24px;
    font-weight: 400;
+   margin-bottom: 26px;
 }
 
 .button {
@@ -91,17 +102,20 @@ height: 10%;
    display: flex;
    flex-direction: column;
    align-items: center;
+   padding-top: 60px;
 }
 
 .guides h2 {
    font-family: Roboto, sans-serif;
    font-size: 36px;
    font-weight: 700;
+   margin-bottom: 27px;
 }
 .guides p {
    font-family: Roboto, sans-serif;
    font-size: 20px;
    font-weight: 400px;
+   margin-bottom: 27px;
 }
 .guides :last-child {
    margin-top: 70px;
@@ -111,7 +125,8 @@ height: 10%;
 .card-description {
    height: 700px;
    display: flex;
-   justify-content: space-evenly;
+   justify-content: center;
+   gap: 60px;
 }
 .card-1 {
    text-align: center;
@@ -120,11 +135,19 @@ height: 10%;
    font-family: Roboto, sans-serif;
    font-size: 17px;
    font-weight: 700;
+   margin-top: 20px;
+   margin-bottom: 17px;
+   margin-left: 78px;
+   height: 60px;
+   width: 155px;
+   
+
 }
 .price {
    font-family: Roboto, sans-serif;
    font-size: 17px;
    font-weight: 400;
+   margin-bottom: 10px;
 }
 .card-1 a {
    font-family: Roboto, sans-serif;
@@ -194,12 +217,14 @@ height: 10%;
    font-family: Roboto, sans-serif;
    font-size: 36px;
    font-weight: 700;
+   margin-bottom: 31px;
 }
 
 .wrapper p {
    font-family: Roboto, sans-serif;
    font-size: 36px;
    font-weight: 400;
+   margin-bottom: 40px;
 }
 
 .wrapper h3 {
@@ -327,11 +352,24 @@ text-align: center;
 }
 
 .card-voices-description {
-   height: 700px;
+   height: 770px;
    display: flex;
    justify-content: space-evenly;
+   position: relative;
+   z-index: 5;
 }
-
+.round-card-1 {
+   position: relative;
+   z-index: 5;
+}
+.round-card-2 {
+   position: relative;
+   z-index: 5;
+}
+.round-card-3 {
+   position: relative;
+   z-index: 5;
+}
 .card-voices-description h3 {
    font-family: Roboto, sans-serif;
    font-weight: bold;
@@ -395,4 +433,139 @@ text-align: center;
    font-size: 19px;
    font-weight: 400;
    text-align: center;
+}
+
+
+
+.card-voices-description::after {
+   content: '';
+   position: absolute;
+   width: 100%;
+   height: 480px;
+   background-color: #F0F0F0;
+   top: 193px;
+   z-index: 1;
+}
+
+   .touch-text p {
+      font-family: Roboto, sans-serif ;
+   font-size: 36px;
+   font-weight: 700;
+   text-align: center;
+   margin-bottom: 9px;
+
+   }
+
+.touch-text h3 {
+      font-family: Roboto, sans-serif;
+      font-size: 17px;
+      line-height: 20px;
+      text-align: center;
+      margin-bottom: 26px;
+}
+
+.input-information {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   gap: 18px;
+}
+
+.input-name {
+   display: flex;
+   justify-content: center;
+   gap: 52px;
+   margin-bottom: 18px;
+}
+.Email input[type=text]{
+   width: 359px;
+   height: 39px;
+}
+.input-name input[type=text] {
+   width: 153px;
+   height: 39px;
+}
+.wrapper-Email-button {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   gap: 16px;
+   margin-bottom: 88px;
+}
+
+footer {
+   display: flex;
+   height: 277px;
+   background-color: #020202;
+}
+
+.logo-items {
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   gap: 45px;
+   margin-top: 52px;
+   margin-left: 173px;
+}
+
+.logo-items div :nth-child(2) {
+   margin: 0 21px;
+}
+
+.footer-ul1 :first-child {
+   font-family: Roboto, sans-serif;
+   font-size: 14px;
+   font-weight: 400;
+   text-align: left;
+   color: #FFF;
+   text-transform: uppercase;
+   margin-bottom: 36px;
+}
+
+.footer-ul1 {
+   font-family: Roboto, sans-serif;
+   font-size: 14px;
+   font-weight: 400;
+   text-align: left;
+   color: #FFF;
+   margin-top: 52px;
+   margin-left: 586px;
+   margin-right: 72px;
+}
+
+.footer-ul1 li {
+   margin-bottom: 1em;
+}
+
+.footer-ul2 :first-child {
+   font-family: Roboto, sans-serif;
+   font-size: 14px;
+   font-weight: 400;
+   text-align: left;
+   color: #FFF;
+   text-transform: uppercase;
+   margin-bottom: 36px;
+}
+
+.footer-ul2 {
+   font-family: Roboto, sans-serif;
+   font-size: 14px;
+   font-weight: 400;
+   text-align: left;
+   color: #FFF;
+   margin-top: 52px;
+   
+}
+.footer-ul2 li {
+   margin-bottom: 1em;
+}
+
+.copyright {
+   font-family: Roboto, sans-serif;
+font-size: 14px;
+font-weight: 400;
+text-align: center;
+color: #FFF;
+background-color: #020202;
+padding-bottom: 16px;
 }
